# gluegun

./: .gitignore  CMakeLists.txt  Gopkg.toml  LICENSE  Player.js  PlayerBuffer_generated.h  README.md  conanfile.py  core.cpp  flex.go  flex.js  gluegun.fbs  gluegun.go  gluegun_image_license.txt  package.json  registry.fbs  registry.go
basic-js-to-c++/: CMakeLists.txt  DistributedStateAddress.fbs  DistributedStateAddress_generated.h  Player.cpp  Player.h  Player.js  PlayerBuffer.fbs  PlayerBuffer_generated.h  PlayerBuffer_generated.js  PlayerModule.cpp  PlayerModule.h  PlayerModuleObjects_generated.h  PlayerModuleObjects_generated.js  main.cpp  network_msg_to_module_dispatcher.cpp  network_msg_to_module_dispatcher.h
dependencies/nanomsg/: README.md
dependencies/nanomsgxx/: README.md  conanfile.py
dependencies/nanomsgxx/assets/cmake/: CompilerOptions.cmake  DetectCXXCompiler.cmake
plugins/cpp/: Player.cpp  README.md  core.cpp  plugin.fbs
plugins/cpp/basic-js-to-c++/: DistributedStateAddress_generated.js  Player.h  Player.js  PlayerModuleObjects.fbs  network_msg_to_module_dispatcher.cpp  network_msg_to_module_dispatcher.h  network_nanomsg.cpp  network_nanomsg.h
plugins/cpp/dependencies/nanomsgxx/: conanfile.py
plugins/go/: plugin.fbs  plugin.go
plugins/js/: PlayerBuffer_generated.js  logging.fbs
plugins/logging/: flex.js  logging.fbs  logging.js  logging_plugin_interface.fbs  logging_plugin_interface_generated.js  package.json
plugins/render_plugin/: CMakeLists.txt  gluegun_generated.h  rendering_plugin.cpp
plugins/render_plugin/dependencies/nanomsg/: conanfile.py
plugins/render_plugin/dependencies/nanomsgxx/assets/: CMakeLists.txt
